<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2018 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
...
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="once">Once</string>
    <string name="always">Always</string>
    <string name="deny">Deny</string>

...
    <!-- -->

    <!-- Formula editor strings -->
    <string name="formula_editor_data">Data</string>
    <string name="formula_editor_true">true</string>
    <string name="formula_editor_false">false</string>
    <string name="formula_editor_decimal_mark">.</string>
    <string name="formula_editor_title">Formula editor</string>
    <string name="formula_editor_changes_saved">Changes saved.</string>
    <string name="formula_editor_changes_discarded">Changes discarded!</string>
    <string name="formula_editor_parse_fail">Formula is not valid!</string>
    <string name="formula_nothing_selected">Define input value</string>
    <string name="formula_editor_parse_fail_formula_too_long">Formula too long!</string>
    <string name="formula_editor_choose_object_variable">Properties of this actor or object</string>
    <string name="formula_editor_bracket_open">(</string>
    <string name="formula_editor_bracket_close">)</string>
    <string name="formula_editor_function_sin">sine</string>
...
    <string name="formula_editor_function_log_parameter">(10)</string>
    <string name="formula_editor_function_pi">pi</string>
    <string name="formula_editor_function_pi_parameter"></string>
    <string name="formula_editor_object_color">color</string>
    <string name="formula_editor_function_sqrt">square root</string>
    <string name="formula_editor_function_sqrt_parameter">(4)</string>
    <string name="formula_editor_function_rand">random value from to</string>
    <string name="formula_editor_function_rand_parameter">(1,6)</string>
    <string name="formula_editor_function_abs">absolute value</string>
    <string name="formula_editor_function_abs_parameter">(1)</string>
    <string name="formula_editor_function_round">round</string>
    <string name="formula_editor_function_round_parameter">(1.6)</string>
    <string name="formula_editor_function_mod">modulo</string>
    <string name="formula_editor_function_mod_parameter">(3,2)</string>
...
    <string name="formula_editor_operator_divide">÷</string>
    <string name="formula_editor_operator_power">^</string>
    <string name="formula_editor_image_button_description_delete">delete</string>
    <string name="formula_editor_variable_dialog_title">New variable</string>
    <string name="formula_editor_list_dialog_title">New list</string>
    <string name="formula_editor_discard_changes_dialog_message">Do you want to save your changes?</string>
    <string name="formula_editor_discard_changes_dialog_title">Save changes?</string>
    <string name="formula_editor_new_string_name">New text</string>
    <string name="formula_editor_dialog_change_text">Change text</string>
    <string name="formula_editor_fragment_data_current_items">current items</string>
    <string name="formula_editor_data_dialog_is_list">Make it a list</string>
    <string name="formula_editor_sensor_face_detected">face is visible</string>
    <string name="formula_editor_sensor_face_size">face size</string>
...
